Fixed more SonarQube errors